Implemented simple Tcp listener loop

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,7 +25,10 @@
             "command": "cargo build",
             "problemMatcher": [
                 "$rustc"
-            ]
+            ],
+            "presentation": {
+                "clear": true
+            }
         },
     ]
 }
