--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 
 [dependencies]
 futures = "0.3"
-async-std = { version = "1.2", features = ["attributes"] }
+async-std = { version = "1.5", features = ["attributes"] }
+async-listen = "0.2"
 
