--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ edition = "2018"
 futures = "0.3"
 async-std = { version = "1.5", features = ["attributes"] }
 async-listen = "0.2"
+thiserror = "1.0"
 
