--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snmp-agent"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Andy Philpotts <andy@failfree.net>"]
 edition = "2018"
 
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 futures = "0.3"
-async-std = { version = "1.5", features = ["attributes"] }
-async-listen = "0.2"
+async-std = { version = "1.3", features = ["attributes"] }
 thiserror = "1.0"
+clap = { git = "https://github.com/clap-rs/clap/" } # bin , use git to grab 3.0 version
 
