--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ edition = "2018"
 futures = "0.3"
 async-std = { version = "1.3", features = ["attributes"] }
 thiserror = "1.0"
-clap = { git = "https://github.com/clap-rs/clap/" } # bin , use git to grab 3.0 version
-
+clap = { git = "https://github.com/clap-rs/clap" } # bin , use git to grab 3.0 version
+snmp = { git = "https://github.com/sirxyzzy/rust-snmp" }
+byte_string = "1.0"
